move UIO to buttom on smaller screens

--- a/demos/uiOptions/index.html
+++ b/demos/uiOptions/index.html
@@ -82,6 +82,7 @@
 
         <div class="flc-overviewPanel fl-overviewPanel-container"></div>
         <!-- BEGIN markup for Preference Editor -->
+        <div class='uioption'>
         <div class="flc-prefsEditor-separatedPanel fl-prefsEditor-separatedPanel">
             <!-- This is the div that will contain the Preference Editor component -->
             <div class="flc-slidingPanel-panel flc-prefsEditor-iframe"></div>
@@ -93,6 +94,7 @@
                     <button id="show-hide" class="flc-slidingPanel-toggleButton fl-prefsEditor-showHide"> Show/Hide</button>
                 </span>
             </div>
+        </div>
         </div>
         <!-- END markup for Preference Editor -->
 
